[tool.poetry]
name = "etl"
version = "0.1.0"
description = "Senniors Technical Test ETL"
authors = ["Martín Galdeano Cañizares <martingaldeca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
